tests/bad_programs/syntax_errors/elseif_no_whitespace.notc
int main() {
    int i;
    if (true)
        i = 0;
    elseif
        i = 1;
}
